GoKubeDeploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gokubedeploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gokubedeploy
  template:
    metadata:
      labels:
        app: gokubedeploy
    spec:
      containers:
        - name: gokubedeploy
          image: elliotsecops/gokubedeploy:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: gokubedeploy-service
spec:
  selector:
    app: gokubedeploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
